<resources>
    <string name="app_name">My Profile</string>
    <string name="settings">Settings</string>
    <string name="your_name">Your name</string>
    <string name="career">Career</string>
    <string name="go_to_settings">Go to settings and fill out the profile</string>
    <string name="home_address">Home address</string>
    <string name="facebook">facebook</string>
    <string name="linkedin">linkedin</string>
    <string name="vkontakte">vkontakte</string>
    <string name="view_my_contacts">view my contacts</string>
    <string name="edit_profile">Edit profile</string>
    <string name="acquainted">Let\'s get acquainted</string>
    <string name="fill_profile">Fill out the profile and go to the application!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="remember">Remember me</string>
    <string name="google">Google</string>
    <string name="terms">By clicking Register you agree to our Terms \nand Conditions</string>
    <string name="account">Already have an account?</string>
    <string name="sign">Sign in</string>
    <string name="or">or</string>
    <string name="invalid_email_message">Invalid email.</string>
    <string name="invalid_password_message">Use 8 or more characters with a mix
        of letters and numbers.</string>
</resources>